Consolidate cull and block buttons into a single tristate button